test/tests/compiler/8_loops/valid/plx1_loop_all_empty.plx
pub fn main(none) i32 {
    x: i32 = 0

    loop y: i32 = (
        x = 1) while y - x;

    loop x = x + 1 while 0 > 1 .. x = x + 1;

    loop while (x = x + 1) < 8 .. x = x + 2;

    loop .. while not (x = 
        x + 2
    );

    loop while (x = x - 1) % 2 == 1;

    return x - 10
}
