test/tests/compiler/8_loops/invalid_parse/plx1_loop_after_line.plx
pub fn main(none) i32 {
    { ; } loop .. while 0;
}
